# ogle

./: .CMakeLists.txt.swp  .clang_complete  .clang_complete-e  .dir-locals.el  .dir-locals.el~  CMakeLists.txt  README.md  TODO  compile  imgui.ini  log.txt  rebuild  run
brain/: CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile~  a.out  audio.cpp  audio.cpp~  audio.h  audio.h~  main.cpp  ogg.cpp~  ogg.hpp~  sff.cpp  sff.cpp~  sff.h~  sfx.cpp~  sfx.hpp~  sfx.h~  source.cpp  source.cpp~  source.h  source.h~  wav.cpp  wav.cpp~  wav.hpp  wav.h~
include/glad/: glad.h
include/ogle/: .texture.hpp.swp  camera.hpp  character.hpp  character.hpp~  debug.hpp  engine.hpp  engine.hpp~  font.hpp  font.hpp~  light.hpp  light.hpp~  mesh.hpp  model.hpp  ogle.hpp  renderer.hpp  renderer.hpp~  rendertext.hpp  rendertext.hpp~  rotation.hpp  rotaxis.hpp  shader.hpp  skybox.hpp  skybox.hpp~  texture.hpp  transform.hpp  vertex.hpp
include/ogle/drawing/: basicmesh.hpp  basicmesh.hpp~  basicmodel.hpp  basicmodel.hpp~  drawable.hpp  drawable.hpp~  drawing.hpp  drawing.hpp~
include/ogle/sf/: #wav.h#  .#wav.h  audio.h  ogg.hpp  ogg.hpp~  sf.hpp  sf.hpp~  sff.hpp  sff.hpp~  sfx.hpp  sfx.hpp~  source.h  wav.h  wav.h~
include/sol/: helpers.hpp  helpers.hpp~
res/: .light.frag.swp  .sky.frag.swp  .sky.vert.swp  basic.frag  basic.vert  ceiling.omf  crate.omf  floor.omf  lamp.frag  lamp.vert  light.frag  sky.vert  wall.omf  white.frag
res/ame_iceflats/: iceflats_up1.tga  iceflats_up1a.tga
res/objects/: fighter01.mtl  forklift.mtl  robot_inprogress.mtl
res/scripts/: flashlight.lua  flashlight.lua~  skybox.lua  skybox.lua~  skybox_a.lua  skybox_a.lua~  startup.lua  startup.lua~  window.lua
src/: .main.cpp.swp  main.cpp
src/glad/: glad.c
src/imgui/: imgui_impl_sdl_gl3.cpp
src/ogle/: .mesh.cpp.swp  .texture.cpp.swp  camera.cpp  engine.cpp  engine.cpp~  font.cpp  font.cpp~  light.cpp  light.cpp~  mesh.cpp  model.cpp  renderer.cpp  renderer.cpp~  rendertext.cpp  rendertext.cpp~  rotation.cpp  shader.cpp  skybox.cpp  skybox.cpp~  texture.cpp  transform.cpp
src/ogle/drawing/: basicmesh.cpp  basicmesh.cpp~  basicmodel.cpp  basicmodel.cpp~
src/ogle/sf/: audio.cpp  audio.cpp~  ogg.cpp  ogg.cpp~  sff.cpp  sff.cpp~  sfx.cpp  sfx.cpp~  source.cpp  source.cpp~  wav.cpp  wav.cpp~
src/stb/: stb_image.cpp
test/: Makefile  beep.cpp  main.cpp  other.lua  other.lua~  test  test.lua  threads.cpp~
test/al/: Makefile  Makefile~  beep  beep.cpp  beep.cpp~  wr.cpp  wr.cpp~  wr.h  wr.h~
test/al/beep.dSYM/Contents/: Info.plist
test/al/beep.dSYM/Contents/Resources/DWARF/: beep
test/omf_maker/: Makefile  crate.omf  data.txt  main.cpp  test
